--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
   port: 8801
+spring:
+  application:
+    name: UserServer
+  nacos:
+    username: nacos
+    password: nacos
+    discovery:
+      server-addr: 127.0.0.1:8848
+feign:
+  sentinel:
+    enabled: true
