--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -3,9 +3,15 @@ server:
 spring:
   application:
     name: UserServer
+  profiles:
+    active: dev
+  config:
+    import: "optional:nacos:instead"
   nacos:
     username: nacos
     password: nacos
+    config:
+      server-addr: 127.0.0.1:8848
     discovery:
       server-addr: 127.0.0.1:8848
 feign:
