--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   profiles:
     active: dev
   config:
-    import: "optional:nacos:instead"
+    import: "optional:nacos:${spring.application.name}-${spring.profiles.active}.properties"
   nacos:
     username: nacos
     password: nacos
