--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -14,6 +14,12 @@ spring:
       server-addr: 127.0.0.1:8848
     discovery:
       server-addr: 127.0.0.1:8848
+  cloud:
+    sentinel:
+      transport:
+        dashboard: "127.0.0.1:8858"
+        heartbeatIntervalMs: 15000
+        port: 8720
 feign:
   sentinel:
     enabled: true
