--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
   profiles:
     active: dev
   config:
-    import: "optional:nacos:${spring.application.name}-${spring.profiles.active}.properties?refreshEnabled=true"
+    import:
+      - "optional:nacos:${spring.application.name}-${spring.profiles.active}.properties?refreshEnabled=true"
   nacos:
     username: nacos
     password: nacos
