--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
         <gmavenplus-plugin.version>1.6</gmavenplus-plugin.version>
         <jacoco.version>0.8.8</jacoco.version>
+        <mybatis-plus.version>3.5.4</mybatis-plus.version>
         <native-maven-plugin.version>0.10.2</native-maven-plugin.version>
     </properties>
 
@@ -65,6 +66,11 @@
                 <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
